<resources>
    <string name="app_name">SST Open House 2017</string>
    <string name="action_settings">Settings</string>

    <!-- URLs -->
    <string name="registration_form_url">https://docs.google.com/forms/d/1O3cWNHVz8nXD3AhQOHmA9f7omppjf6sN5A1UiShg6CM/viewform</string>

    <!-- Redemption -->
    <string name="redemption_header">Redemption</string>
    <string name="redemption_description">Number of codes redeemed:</string>

    <string name="redemption_prize_header">Prize List</string>
    <string name="redemption_prize_A">3 codes - Tier 1 Prize</string>
    <string name="redemption_prize_B">7 codes - Tier 2 Prize</string>
    <string name="redemption_prize_C">10 codes - Tier 3 Prize</string>

    <string name="redemption_button">REDEEM</string>
    <!-- Redemption dialog -->
    <string name="redemption_dialog_header">Redeem</string>
    <string name="redemption_dialog_description">Enter the 4 digit booth code</string>
    <!-- Redemption error dialog -->
    <string name="redemption_dialog_error_header">Error</string>
    <string name="redemption_dialog_error_invalid_code">The redemption code is invalid. Please make sure that the code is 4 characters long.</string>
    <string name="redemption_dialog_error_no_such_code">The redemption code is incorrect.</string>
    <string name="redemption_dialog_error_code_redeemed">You have already redeemed this code.</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_redemption">Redemption</string>
    <string name="title_website">Website</string>
</resources>
